# Kiriko

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: ci.yml
crates/kiriko-app/: Cargo.toml
crates/kiriko-app/src/: main.rs
crates/kiriko-core/src/: lib.rs  mask.rs  model.rs  ops.rs  retime.rs  sequence.rs  store.rs
crates/kiriko-eval/src/: lib.rs
crates/kiriko-ui/: Cargo.toml
crates/lumit-bridge/: Cargo.toml
crates/lumit-bridge/src/: cancel.rs  edits.rs  ffi.rs  framecache.rs  lib.rs  media.rs  render.rs  snapshot.rs  state.rs
crates/lumit-cache/: Cargo.toml
crates/lumit-gpu/: Cargo.toml
crates/lumit-ui/: Cargo.toml
docs/: 01-GLOSSARY.md  02-DECISIONS.md  03-DATA-MODEL.md  05-ARCHITECTURE.md  06-RENDER-PIPELINE.md  07-UI-SPEC.md  08-EFFECTS.md  12-PLUGINS.md  14-ENGINEERING-RULES.md  15-DESIGN.md  16-ROADMAP.md  GUIDE.md  implementation-audit-2026-07-20.md  implementation-dependency-graph.md  test-feedback-log.md
docs/flutter-port/: 03-ARCHITECTURE.md  05-PARITY-CHECKLIST.md  06-REMAINING-WORK.md
flutter_ui/lib/: main.dart
flutter_ui/test/: bridge_test.dart  drag_value_menu_test.dart  export_test.dart  f4_editors_test.dart  f4_effects_test.dart  final_sweep_test.dart  graph_editor_test.dart  project_placement_test.dart  recovery_test.dart  section_d_test.dart  shell_smoke_test.dart  splash_bootlog_test.dart  timeline_columns_session_test.dart  timeline_graph_ui_test.dart  timeline_test.dart  ui_scale_test.dart  viewer_placeholder_test.dart  viewer_scopes_test.dart
packaging/flatpak/: io.github.luminalmvm.Lumit.yml
(+121 files in other folders)
